--- a/style.css
+++ b/style.css
@@ -32,6 +32,45 @@ body {
   font-family: 'Futura', sans-serif;
 }
 
+.sunset_btn{
+  background-color: #e28029;
+  border: none;
+  color: #ffffff;
+}
+
+
+.sunset_btn:active{
+  background-color: #d53b31; 
+  color: #d53b31;
+  border: none;
+}
+
+.sunset_btn:hover {
+  background-color: #e28029; 
+  color: #ffffff;
+  border: none;
+  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(255, 255, 255, 0.19);
+}
+
+
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #d53b31;
+  --bs-btn-border-color: #d53b31;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #d53b31;
+  --bs-btn-hover-border-color: #d53b31;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #d53b31;
+  --bs-btn-active-border-color: #d53b31;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #d53b31;
+  --bs-btn-disabled-border-color: #d53b31;
+}
+
+
 
 @media only screen and (max-width: 1100px) {
   #img {
