--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   margin: 0;
   padding: 0;
   background-color: #000000;
+color: #ffffff;
+  font-family: "futura-pt", sans-serif;
+font-weight: 500;
+font-style: normal;
 
 }
 
@@ -36,6 +40,9 @@ body {
   background-color: #e28029;
   border: none;
   color: #ffffff;
+  font-family: "futura-pt", sans-serif;
+font-weight: 700;
+font-style: normal;
 }
 
 
@@ -49,7 +56,7 @@ body {
   background-color: #e28029; 
   color: #ffffff;
   border: none;
-  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(255, 255, 255, 0.19);
+  box-shadow: 0 0.4rem 0.6rem 0 rgba(255, 255, 255, 0.24), 0 0.4rem 0.80rem 0 rgba(255, 255, 255, 0.19);
 }
 
 
@@ -71,11 +78,11 @@ body {
 }
 
 
-
+/*
 @media only screen and (max-width: 1100px) {
   #img {
     height: auto;
     background-color: #000000;
 
-  }
-}
+  } 
+*/
